Criação, documentação e implementação quartos e status
